--- a/Intro.html
+++ b/Intro.html
@@ -7,5 +7,10 @@
 	<h1>My First Heading</h1>
 
 	<p>This is the first paragraph.</p>
+
+	<a href="http://www.amazon.com">Go to Amazon</a>
+	<br>
+	<br>
+	<img src="images/beachball.png" width="75px" height="75px">
 </body>
 </html>
