--- a/Intro.html
+++ b/Intro.html
@@ -11,6 +11,13 @@
 	<a href="http://www.amazon.com">Go to Amazon</a>
 	<br>
 	<br>
+	<hr>
 	<img src="images/beachball.png" width="75px" height="75px">
+	<hr>
+	<p>Hey "Y'all"</p>
+	<hr>
+	<p>This paragraph is <br>broken with a br.</p>
+	<!-- Insert a comment quickly in Sublime Text by pressing "ctrl + /"" -->
+
 </body>
 </html>
