Text Formatting Tags

--- a/Intro.html
+++ b/Intro.html
@@ -19,5 +19,13 @@
 	<p>This paragraph is <br>broken with a br.</p>
 	<!-- Insert a comment quickly in Sublime Text by pressing "ctrl + /"" -->
 
+	<hr>
+	<!-- Text Formatting with Tags -->
+	<p><b>Bold</b></p>
+	<p><i>Italic</i></p>
+	<p><strong>Strong</strong></p>
+	<p><em>EM</em></p>
+	<p><code>Code</code></p>
+
 </body>
 </html>
