--- a/Intro.html
+++ b/Intro.html
@@ -26,6 +26,19 @@
 	<p><strong>Strong</strong></p>
 	<p><em>EM</em></p>
 	<p><code>Code</code></p>
+	<p><sup>superscript</sup> and <sub>subscript</sub></p>
+	<pre>Pre is good for displaying computer code.
+	for (int i = 0; i < len; i++) {
+		nums[i] = x[i];
+	}
+	return x;
+	</pre>
+
+	<hr>
+	<!-- Address Tag -->
+	<address>
+		<b>Email:</b><a href="mailto:billybob@aol.com"> Billy Bob</a>
+	</address>
 
 </body>
 </html>
