Abbreviation and Quotes Tags

--- a/Intro.html
+++ b/Intro.html
@@ -40,5 +40,16 @@
 		<b>Email:</b><a href="mailto:billybob@aol.com"> Billy Bob</a>
 	</address>
 
+	<hr>
+	<!-- Abbreviation Tag -->
+	<abbr title="National Space Agency">NASA</abbr>
+
+	<!-- Reverse Text Direction -->
+	<hr>
+	<bdo dir="rtl">Here some hebrew text</bdo>
+
+	<hr>
+	<p><q>This is in quotes.</q> This is not.</p>
+
 </body>
 </html>
