Target Attribute with Image

--- a/Intro.html
+++ b/Intro.html
@@ -50,6 +50,20 @@
 
 	<hr>
 	<p><q>This is in quotes.</q> This is not.</p>
+	<blockquote>This is a blockquote.  You can have a bunch of stuff here.
+	</blockquote>
+
+	<hr>
+	<del>Deleted</del> <ins>Inserted and Underline</ins>
+
+	<hr>
+	<p>This text is <mark>HighLighted</mark></p>
+
+	<!-- Target Link -->
+	<hr>
+	<a href="http://www.ebay.com" target="_blank"><img src="images/ebay_logo.png" width="100px" height='75px'></a>
+
+
 
 </body>
 </html>
