Added BootStrap to Html

--- a/Intro.html
+++ b/Intro.html
@@ -1,69 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial=scale1">
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+
 	<title>Intro to Html</title>
 </head>
-<body>
-	<h1>My First Heading</h1>
 
-	<p>This is the first paragraph.</p>
+<body role="document">
+	<div class="container">
+		<h1>My First Heading</h1>
 
-	<a href="http://www.amazon.com">Go to Amazon</a>
-	<br>
-	<br>
-	<hr>
-	<img src="images/beachball.png" width="75px" height="75px">
-	<hr>
-	<p>Hey "Y'all"</p>
-	<hr>
-	<p>This paragraph is <br>broken with a br.</p>
-	<!-- Insert a comment quickly in Sublime Text by pressing "ctrl + /"" -->
+		<p>This is the first paragraph.</p>
 
-	<hr>
-	<!-- Text Formatting with Tags -->
-	<p><b>Bold</b></p>
-	<p><i>Italic</i></p>
-	<p><strong>Strong</strong></p>
-	<p><em>EM</em></p>
-	<p><code>Code</code></p>
-	<p><sup>superscript</sup> and <sub>subscript</sub></p>
-	<pre>Pre is good for displaying computer code.
-	for (int i = 0; i < len; i++) {
-		nums[i] = x[i];
-	}
-	return x;
-	</pre>
+		<a href="http://www.amazon.com">Go to Amazon</a>
+		<br>
+		<br>
+		<hr>
+		<img src="images/beachball.png" width="75px" height="75px">
+		<hr>
+		<p>Hey "Y'all"</p>
+		<hr>
+		<p>This paragraph is <br>broken with a br.</p>
+		<!-- Insert a comment quickly in Sublime Text by pressing "ctrl + /"" -->
 
-	<hr>
-	<!-- Address Tag -->
-	<address>
-		<b>Email:</b><a href="mailto:billybob@aol.com"> Billy Bob</a>
-	</address>
+		<hr>
+		<!-- Text Formatting with Tags -->
+		<p><b>Bold</b></p>
+		<p><i>Italic</i></p>
+		<p><strong>Strong</strong></p>
+		<p><em>EM</em></p>
+		<p><code>Code</code></p>
+		<p><sup>superscript</sup> and <sub>subscript</sub></p>
+		<pre>Pre is good for displaying computer code.
+		for (int i = 0; i < len; i++) {
+			nums[i] = x[i];
+		}
+		return x;
+		</pre>
 
-	<hr>
-	<!-- Abbreviation Tag -->
-	<abbr title="National Space Agency">NASA</abbr>
+		<hr>
+		<!-- Address Tag -->
+		<address>
+			<b>Email:</b><a href="mailto:billybob@aol.com"> Billy Bob</a>
+		</address>
 
-	<!-- Reverse Text Direction -->
-	<hr>
-	<bdo dir="rtl">Here some hebrew text</bdo>
+		<hr>
+		<!-- Abbreviation Tag -->
+		<abbr title="National Space Agency">NASA</abbr>
 
-	<hr>
-	<p><q>This is in quotes.</q> This is not.</p>
-	<blockquote>This is a blockquote.  You can have a bunch of stuff here.
-	</blockquote>
+		<!-- Reverse Text Direction -->
+		<hr>
+		<bdo dir="rtl">Here some hebrew text</bdo>
 
-	<hr>
-	<del>Deleted</del> <ins>Inserted and Underline</ins>
+		<hr>
+		<p><q>This is in quotes.</q> This is not.</p>
+		<blockquote>This is a blockquote.  You can have a bunch of stuff here.
+		</blockquote>
 
-	<hr>
-	<p>This text is <mark>HighLighted</mark></p>
+		<hr>
+		<del>Deleted</del> <ins>Inserted and Underline</ins>
 
-	<!-- Target Link -->
-	<hr>
-	<a href="http://www.ebay.com" target="_blank"><img src="images/ebay_logo.png" width="100px" height='75px'></a>
+		<hr>
+		<p>This text is <mark>HighLighted</mark></p>
+
+		<!-- Target Link -->
+		<hr>
+		<a href="http://www.ebay.com" target="_blank"><img src="images/ebay_logo.png" width="100px" height='75px'></a>
+
+	</div>
 
 
 
+	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.js"></script>
 </body>
 </html>
