--- a/Intro.html
+++ b/Intro.html
@@ -74,8 +74,12 @@
 		<hr>
 		<a href="http://www.ebay.com" target="_blank"><img src="images/ebay_logo.png" width="100px" height='75px'></a>
 
-	</div>
+		<hr>
+		<a href="http://www.google.com"><img src="images/mother_day.jpg"></a>
 
+		<footer>The bottom of the Page</footer>
+
+	</div>
 
 
 	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>
