Added BootStrap Buttons for Fun

--- a/Intro.html
+++ b/Intro.html
@@ -72,10 +72,15 @@
 
 		<!-- Target Link -->
 		<hr>
-		<a href="http://www.ebay.com" target="_blank"><img src="images/ebay_logo.png" width="100px" height='75px'></a>
+		<a href="http://www.ebay.com" target="_blank"><img class="img-thumbnail" src="images/ebay_logo.png" width="100px" height='75px'></a>
 
 		<hr>
-		<a href="http://www.google.com"><img src="images/mother_day.jpg"></a>
+		<a href="http://www.google.com"><img class="img-thumbnail" src="images/mother_day.jpg" style="border=0;"></a>
+
+		<hr>
+		<button class="btn btn-large btn-success">Success Button</button>
+		<button class="btn btn-danger">Danger</button>
+		<hr>
 
 		<footer>The bottom of the Page</footer>
 
