--- a/Intro.html
+++ b/Intro.html
@@ -14,7 +14,31 @@
 </head>
 
 <body role="document">
+
+	<div class="navbar navbar-inverse" role="navigation">
+		<div class="container">
+
+			<div class="navbar-header">
+				<a class="navbar-brand">Intro to Html</a>
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						<span class="sr-only">Toggle Navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+			</div>
+
+			<div class="navbar-collapse collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="">Home</a></li>
+					<li><a href="">Cool</a></li>
+					<li><a href="">Contact Me</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 	<div class="container">
+
 		<h1>My First Heading</h1>
 
 		<p>This is the first paragraph.</p>
