--- a/Intro.html
+++ b/Intro.html
@@ -15,7 +15,7 @@
 
 <body role="document">
 
-	<div class="navbar navbar-inverse" role="navigation">
+	<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		<div class="container">
 
 			<div class="navbar-header">
@@ -37,11 +37,15 @@
 			</div>
 		</div>
 	</div>
-	<div class="container">
 
+
+	<div class="container">
+		<div class="jumbotron">
 		<h1>My First Heading</h1>
 
 		<p>This is the first paragraph.</p>
+
+		</div>
 
 		<a href="http://www.amazon.com">Go to Amazon</a>
 		<br>
@@ -99,7 +103,7 @@
 		<a href="http://www.ebay.com" target="_blank"><img class="img-thumbnail" src="images/ebay_logo.png" width="100px" height='75px'></a>
 
 		<hr>
-		<a href="http://www.google.com"><img class="img-thumbnail" src="images/mother_day.jpg" style="border=0;"></a>
+		<a href="http://www.google.com" target="_top"><img class="img-thumbnail" src="images/mother_day.jpg" style="border=0;"></a>
 
 		<hr>
 		<button class="btn btn-large btn-success">Success Button</button>
