ImageMap is cool

--- a/Intro.html
+++ b/Intro.html
@@ -108,8 +108,20 @@
 		<hr>
 		<button class="btn btn-large btn-success">Success Button</button>
 		<button class="btn btn-danger">Danger</button>
-		<hr>
 
+
+		<hr>
+		<a href="#" style="text-decoration:none;">A Link that is not underline</a>
+
+		<hr>
+		<img class="image-thumbnail" src="images/winter_night.png" width="700px" height="375px" usemap="#winter">
+		<map name="winter">
+			<area shape="rect" coords="0, 0, 350, 185" alt="Moon" href="#"></area>
+			<area shape="circle" coords="600, 150, 50" alt="Sun" href="#"></area>
+		</map>
+
+
+		<hr>
 		<footer>The bottom of the Page</footer>
 
 	</div>
