--- a/Intro.html
+++ b/Intro.html
@@ -122,6 +122,41 @@
 
 
 		<hr>
+		<div class="page-header">
+			<h1>List Headers</h1>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-4">
+				<ul class="list-group">
+					<a class="list-group-item active">Topic</a>
+					<a class="list-group-item" href="">Apple</a>
+					<a class="list-group-item" href="">Banana</a>
+					<a class="list-group-item" href="">Pear</a>
+				</ul>
+			</div>
+
+			<div class="col-sm-3">
+				<ul class="list-group">
+					<a class="list-group-item">
+						<h4 class="list-group-item-heading">Header</h4>
+						<p class="list-group-item-text">Body</p>
+					</a>
+					<a class="list-group-item active">
+						<h4 class="list-group-item-heading">Header 2</h4>
+						<p class="list-group-item-text">Body 2</p>
+					</a>
+				</ul>
+			</div>
+		</div>
+
+		<hr>
+		<div class="page-header">
+			<h1>Panels</h1>
+		</div>
+
+
+		<hr>
 		<footer>The bottom of the Page</footer>
 
 	</div>
