--- a/Intro.html
+++ b/Intro.html
@@ -155,6 +155,56 @@
 			<h1>Panels</h1>
 		</div>
 
+		<div class="row">
+			<div class="col-sm-4">
+				<div class="panel panel-success">
+					<div class="panel-heading">
+						<h3 class="panel-title">Weapons</h3>
+					</div>
+					<div class="panel-body">
+						<p>These are the items you can collect</p>
+						<ul class="list-group">
+							<li class="list-group-item">Sword</li>
+							<li class="list-group-item">Mace</li>
+							<li class="list-group-item">Axe</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-sm-4">
+				<div class="panel panel-warning">
+					<div class="panel-heading">
+						<h3 class="panel-title">Shields</h3>
+					</div>
+					<div class="panel-body">
+						<p>These are the items you can collect</p>
+						<ul class="list-group">
+							<li class="list-group-item">Buckler</li>
+							<li class="list-group-item">Round</li>
+							<li class="list-group-item">Heater</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-sm-4">
+				<div class="panel panel-danger">
+					<div class="panel-heading">
+						<h3 class="panel-title">Armor</h3>
+					</div>
+					<div class="panel-body">
+						<p>These are the items you can collect</p>
+						<ul class="list-group">
+							<li class="list-group-item">Leather</li>
+							<li class="list-group-item">Chain</li>
+							<li class="list-group-item">Plate</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
 
 		<hr>
 		<footer>The bottom of the Page</footer>
