Alerts that are dismissable with links

--- a/Intro.html
+++ b/Intro.html
@@ -205,6 +205,37 @@
 			</div>
 		</div>
 
+		<!-- Badges -->
+
+		<button class="btn btn-primary">Hp: <span class="badge">74</span></button>
+		<button class="btn btn-warning">Mp: <span class="badge">33</span></button>
+
+		<hr>
+		<!-- Pagination -->
+		<ul class="pagination">
+			<li><a href="">&laquo;</a></li>
+			<li class="active"><a href="">One</a></li>
+			<li><a href="">Two</a></li>
+			<li><a href="">Three</a></li>
+			<li><a href="">&raquo;</a></li>
+		</ul>
+
+
+		<hr>
+		<!-- Alerts -->
+		<div class="alert alert-success alert-dismissable">
+			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+			Success Alert
+			<a class="alert-link" href="">You Win</a>
+		</div>
+		<div class="alert alert-danger alert-dismissable">
+			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>Danger Alert
+			<a class="alert-link" href="">Watch out for that Rock</a>
+		</div>
+		<div class="alert alert-info alert-dismissable">
+			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>Info Alert
+			<a class="alert-link" href="">Extra Information Here</a>
+		</div>
 
 		<hr>
 		<footer>The bottom of the Page</footer>
