Added Panels Glyphicons

--- a/Intro.html
+++ b/Intro.html
@@ -174,7 +174,10 @@
 			<div class="col-sm-4">
 				<div class="panel panel-success">
 					<div class="panel-heading">
-						<h3 class="panel-title">Weapons</h3>
+						<h3 class="panel-title">
+							<span class="glyphicon glyphicon-flash"></span>
+							Weapons
+						</h3>
 					</div>
 					<div class="panel-body">
 						<p>These are the items you can collect</p>
@@ -190,7 +193,10 @@
 			<div class="col-sm-4">
 				<div class="panel panel-warning">
 					<div class="panel-heading">
-						<h3 class="panel-title">Shields</h3>
+						<h3 class="panel-title">
+							<span class="glyphicon glyphicon-heart-empty"></span>
+							Shields
+						</h3>
 					</div>
 					<div class="panel-body">
 						<p>These are the items you can collect</p>
@@ -206,7 +212,10 @@
 			<div class="col-sm-4">
 				<div class="panel panel-danger">
 					<div class="panel-heading">
-						<h3 class="panel-title">Armor</h3>
+						<h3 class="panel-title">
+							<span class="glyphicon glyphicon-tower"></span>
+							Armor
+						</h3>
 					</div>
 					<div class="panel-body">
 						<p>These are the items you can collect</p>
