--- a/Intro.html
+++ b/Intro.html
@@ -9,6 +9,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
+	<link rel="stylesheet" type="text/css" href="css/theme.css">
 
 	<title>Intro to Html</title>
 </head>
@@ -48,6 +49,18 @@
 						</a>
 						
 					</li>
+					<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="#">Action</a></li>
+								<li><a href="#">Another action</a></li>
+								<li><a href="#">Something else here</a></li>
+								<li class="divider"></li>
+								<li class="dropdown-header">Nav Header</li>
+								<li><a href="#">Separated link</a></li>
+								<li><a href="#">One more Separated Link</a></li>
+							</ul>
+						</li>
 				</ul>
 			</div>
 		</div>
@@ -293,6 +306,8 @@
 				</li>
 			</ul>
 		</div>
+
+
 
 		<hr>
 		<footer>The bottom of the Page</footer>
