Ordered List with Panels

--- a/Intro.html
+++ b/Intro.html
@@ -276,35 +276,21 @@
 
 
 		<hr>
-		<!-- DropDown Menus -->
-		<div class="dropdown">
-			<button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu1" data-toggle="dropdown">
-				DropDown
-				<span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu" role="menu" aria-labelleby="dropdownMenu1">
-				<li role="presentation">
-					<a href="#" role="menuitem" tabindex="-1">
-						Action
-					</a>
-				</li>
-				<li role="presentation">
-					<a href="#" role="menuitem" tabindex="-1">
-						Another Action
-					</a>
-				</li>
-				<li role="presentation">
-					<a href="#" role="menuitem" tabindex="-1">
-						Something Else Here
-					</a>
-				</li>
-				<li class="divider" role="presentation"></li>
-				<li role="presentation">
-					<a href="#" role="menuitem" tabindex="-1">
-						Separated Link
-					</a>
-				</li>
-			</ul>
+
+		<!-- Ordered List -->
+		<div class="panel panel-primary">
+			<ol>
+				<li>Lemon Grass</li>
+				<li>Mint Leaves</li>
+				<li>Oregano</li>
+				<li>Green Onions</li>
+			</ol>
+		</div>
+
+		<!-- Input Groups -->
+		<div class="input-group">
+			<span class="input-group-addon">@</span>
+			<input class="form-control" type="text" placeholder="Username"></input>
 		</div>
 
 
