--- a/Intro.html
+++ b/Intro.html
@@ -288,9 +288,36 @@
 		</div>
 
 		<!-- Input Groups -->
-		<div class="input-group">
+		<div class="input-group input-group-lg">
 			<span class="input-group-addon">@</span>
 			<input class="form-control" type="text" placeholder="Username"></input>
+		</div>
+
+		<hr>
+
+		<div class="input-group input-group-sm">
+			<input class="form-control" type="text"></input>
+			<span class="input-group-addon">.00</span>
+		</div>
+
+		<hr>
+
+		<div class="input-group">
+			<span class="input-group-addon">$</span>
+			<input class="form-control" type="text"></input>
+			<span class="input-group-addon">.00</span>
+		</div>
+
+		<hr>
+
+		<div class="input-group input-group-lg">
+			<span class="input-group-addon">UserName</span>
+			<input class="form-control" type="text" placeholder="Type username here"></input>
+		</div>
+
+		<div class="input-group input-group-lg">
+			<span class="input-group-addon">Password</span>
+			<input class="form-control" type="text" placeholder="Type password here"></input>
 		</div>
 
 
