--- a/Intro.html
+++ b/Intro.html
@@ -288,6 +288,12 @@
 		</div>
 
 		<!-- Input Groups -->
+		<br>
+
+		<div class="page-header">
+			<h1>Input Groups</h1>
+		</div>
+
 		<div class="input-group input-group-lg">
 			<span class="input-group-addon">@</span>
 			<input class="form-control" type="text" placeholder="Username"></input>
@@ -319,6 +325,32 @@
 			<span class="input-group-addon">Password</span>
 			<input class="form-control" type="text" placeholder="Type password here"></input>
 		</div>
+
+		<!-- CheckBoxes on Input Forms -->
+		<hr>
+		<br>
+		<br>
+		<div class="page-header">
+			<h1>CheckBoxes</h1>
+		</div>
+		<div class="row">
+		  <div class="col-lg-6">
+		    <div class="input-group">
+		      <span class="input-group-addon">
+		        <input type="checkbox">
+		      </span>
+		      <input type="text" class="form-control">
+		    </div><!-- /input-group -->
+		  </div><!-- /.col-lg-6 -->
+		  <div class="col-lg-6">
+		    <div class="input-group">
+		      <span class="input-group-addon">
+		        <input type="radio">
+		      </span>
+		      <input type="text" class="form-control">
+		    </div><!-- /input-group -->
+		  </div><!-- /.col-lg-6 -->
+		</div><!-- /.row -->
 
 
 
