--- a/Intro.html
+++ b/Intro.html
@@ -334,7 +334,7 @@
 			<h1>CheckBoxes</h1>
 		</div>
 		<div class="row">
-		  <div class="col-lg-6">
+		  <div class="col-sm-6">
 		    <div class="input-group">
 		      <span class="input-group-addon">
 		        <input type="checkbox">
@@ -342,7 +342,7 @@
 		      <input type="text" class="form-control">
 		    </div><!-- /input-group -->
 		  </div><!-- /.col-lg-6 -->
-		  <div class="col-lg-6">
+		  <div class="col-sm-6">
 		    <div class="input-group">
 		      <span class="input-group-addon">
 		        <input type="radio">
