Nested Span to get glyphicon into input forms

--- a/Intro.html
+++ b/Intro.html
@@ -316,15 +316,34 @@
 
 		<hr>
 
-		<div class="input-group input-group-lg">
-			<span class="input-group-addon">UserName</span>
-			<input class="form-control" type="text" placeholder="Type username here"></input>
+		<div class="page-header">
+			<h1>UserName and Password Login</h1>
+		</div>
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="input-group input-group-lg">
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-user"></span>
+						 UserName
+					</span>
+					<input class="form-control" type="text" placeholder="Type username here"></input>
+				</div>
+			</div>
+
+			<div class="col-sm-6">
+				<div class="input-group input-group-lg">
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-pencil"></span>
+						 Password
+					</span>
+					<input class="form-control" type="text" placeholder="Type password here"></input>
+				</div>
+			</div>
 		</div>
 
-		<div class="input-group input-group-lg">
-			<span class="input-group-addon">Password</span>
-			<input class="form-control" type="text" placeholder="Type password here"></input>
-		</div>
+		
+
+		
 
 		<!-- CheckBoxes on Input Forms -->
 		<hr>
@@ -353,6 +372,12 @@
 		</div><!-- /.row -->
 
 
+		<!-- Input Group with Buttons and DropDowns -->
+		<hr>
+		<br>
+		<div class="page-header">
+			<h1>Input Group with Buttons and DropDowns</h1>
+		</div>
 
 		<hr>
 		<footer>The bottom of the Page</footer>
