Colorized Button with Input Forms looks good

--- a/Intro.html
+++ b/Intro.html
@@ -379,6 +379,37 @@
 			<h1>Input Group with Buttons and DropDowns</h1>
 		</div>
 
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="input-group">
+					<span class="input-group-btn">
+						<button class="btn btn-success">Go!</button>
+					</span>
+					<input type="text" class="form-control"></input>
+				</div>
+			</div>
+
+			<div class="col-sm-6">
+				<div class="input-group">
+					<span class="input-group-btn">
+						<button class="btn btn-info">Search</button>
+					</span>
+					<input type="text" class="form-control"></input>
+				</div>
+			</div>
+		</div>
+
+
+
+
+
+
+
+
+
+
+
+
 		<hr>
 		<footer>The bottom of the Page</footer>
 
