Sleek Design includes glyphicon + colored buttons

--- a/Intro.html
+++ b/Intro.html
@@ -392,7 +392,9 @@
 			<div class="col-sm-6">
 				<div class="input-group">
 					<span class="input-group-btn">
-						<button class="btn btn-info">Search</button>
+						<button class="btn btn-info">Search
+							<span class="glyphicon glyphicon-search"></span>
+						</button>
 					</span>
 					<input type="text" class="form-control"></input>
 				</div>
