--- a/Intro.html
+++ b/Intro.html
@@ -401,6 +401,29 @@
 			</div>
 		</div>
 
+		<hr>
+		<br>
+		<div class="row">
+			<div class="col-lg-6">
+				<div class="input-group">
+					<div class="input-group-btn">
+						<button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">
+							Action
+							<span class="caret"></span>
+						</button>
+							<ul class="dropdown-menu">
+								<li><a href="#">Action</a></li>
+								<li><a href="#">Another Action</a></li>
+								<li><a href="#">Something else here</a></li>
+								<li class="divider"></li>
+								<li><a href="#">Separated Link</a></li>
+							</ul>
+					</div>
+					<input type="text" class="form-control"></input>
+				</div>
+			</div>
+		</div>
+
 
 
 
