Fixing Completions in SublimeText

--- a/Intro.html
+++ b/Intro.html
@@ -372,11 +372,11 @@
 		</div><!-- /.row -->
 
 
-		<!-- Input Group with Buttons and DropDowns -->
+		<!-- Input Group with Buttons-->
 		<hr>
 		<br>
 		<div class="page-header">
-			<h1>Input Group with Buttons and DropDowns</h1>
+			<h1>Input Group with Buttons</h1>
 		</div>
 
 		<div class="row">
@@ -420,6 +420,21 @@
 							</ul>
 					</div>
 					<input type="text" class="form-control"></input>
+				</div>
+			</div>
+		</div>
+
+
+		<hr>
+		<br>
+		<!-- InputGroup with DropDown -->
+		<div class="page-header">
+			<h1>InputGroup with DropDown Menu</h1>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="input-group">
 				</div>
 			</div>
 		</div>
