--- a/Intro.html
+++ b/Intro.html
@@ -435,6 +435,37 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="input-group">
+					<div class="input-group-btn">
+						<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown">
+							Action 
+							<span class="caret"></span>
+						</button>
+							<ul class="dropdown-menu">
+								<li><a href="#">Action</a></li>
+								<li><a href="#">Another Action</a></li>
+								<li class="divider"></li>
+								<li><a href="#">Separated Action</a></li>
+							</ul>
+					</div>
+					<input type="text" class="form-control"></input>
+				</div>
+			</div>
+
+			<div class="col-sm-6">
+				<div class="input-group">
+					<div class="input-group-btn">
+						<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+							Options
+							<span class="caret"></span>
+						</button>
+							<ul class="dropdown-menu">
+								<li><a href="">Config</a></li>
+								<li><a href="">Listen</a></li>
+								<li class="divider"></li>
+								<li><a href="">Track</a></li>
+							</ul>	
+					</div>
+					<input type= "text" class="form-control"></input>
 				</div>
 			</div>
 		</div>
