--- a/Intro.html
+++ b/Intro.html
@@ -471,6 +471,29 @@
 		</div>
 
 
+		<hr>
+		<br>
+		<div class="page-header">
+			<h1>Progress Bar: Striped and Animated</h1>
+		</div>
+
+		<div class="progress progress-striped">
+			<div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+				<span>40%</span>
+			</div>
+		</div>
+		<div class="progress progress-striped">
+			<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+				<span>20%</span>
+			</div>
+		</div>
+		<div class="progress progress-striped">
+			<div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100" style="width: 89%">
+				<span>89%</span>
+			</div>
+		</div>
+
+
 
 
 
