--- a/Intro.html
+++ b/Intro.html
@@ -493,6 +493,22 @@
 			</div>
 		</div>
 
+		<div class="progress progress-striped active">
+			<div class="progress-bar progress-bar-default" role="progressbar" aria-valuenow="36" aria-valuemin="0" aria-valuemax="100" style="width: 36%">
+				<span>36%</span>
+			</div>
+		</div>
+		<div class="progress progress-striped active">
+			<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="52" aria-valuemin="0" aria-valuemax="100" style="width: 52%">
+				<span>52%</span>
+			</div>
+		</div>
+		<div class="progress progress-striped active">
+			<div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+				<span>100%</span>
+			</div>
+		</div>
+
 
 
 
