Nested MediaObjects took a while

--- a/Intro.html
+++ b/Intro.html
@@ -510,6 +510,61 @@
 		</div>
 
 
+		<hr>
+		<br>
+		<div class="page-header">
+			<h1>Media Objects</h1>
+		</div>
+
+		<div class="media">
+			<a class="pull-left" href="#">
+				<img class="media-object" src="images/ladybug.png" alt="Image" width="64px" height="64px"></img>
+			</a>
+			<div class="media-body">
+				<h3 class="media-heading">Media Heading</h4>
+				<i>Huge Sentence.</i>
+			</div>
+		</div>
+
+		<hr>
+		<br>
+
+		<ul class="media-list">
+			<li class="media">
+				<a class="pull-left" href="#">
+					<img class="media-object" src="images/meerkat.png" alt="meerkat" width="40px" height="100px"></img>
+				</a>
+				<div class="media-body">
+					<h3 class="media-heading">MeerKat</h3>
+					The Meerkat is a Roden.
+
+					<div class="media">
+						<a class="pull-left" href="#">
+							<img class="media-object" src="images/ladybug.png" alt="Image" width="64px" height="64px"></img>
+						</a>
+						<div class="media-body">
+							<h3 class="media-heading">LadyBug</h4>
+							<i>Huge Sentence.</i>
+
+							<div class="media">
+								<a class="pull-left" href="#">
+									<img class="media-object" src="images/cat.png" alt="Cat" width="64px" height="64px"></img>
+								</a>
+								<div class="media-body">
+									<h3 class="media-heading">Cat</h3>
+									<i>This is a cat.</i>
+								</div>
+							</div>
+
+
+						</div>
+					</div>
+
+				</div>
+			</li>
+		</ul>
+
+
 
 
 
