Embed Video Object added into Media Div from Youtube

--- a/Intro.html
+++ b/Intro.html
@@ -565,6 +565,23 @@
 		</ul>
 
 
+		<hr>
+		<br>
+		<div class="page-header">
+			<h1>Embedded Videos</h1>
+		</div>
+
+		<div class="media">
+			<a class="pull-right">
+				<iframe class="media-object" width="560" height="315" src="http://www.youtube.com/embed/8CLG3DOLGx4" frameborder="0" allowfullscreen></iframe>
+			</a>
+			<div class="media-body">
+				<h3>Ramen Walker</h3>
+				<i>It looks delicious</i>
+			</div>
+		</div>
+
+
 
 
 
