Tables within Panels

--- a/Intro.html
+++ b/Intro.html
@@ -581,6 +581,52 @@
 			</div>
 		</div>
 
+		<hr>
+		<br>
+		<div class="page-header">
+			<h1>Panel with Tables</h1>
+		</div>
+
+		<div class="panel panel-primary">
+			<div class="panel-heading">Customer Information</div>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>ID#</th>
+						<th>First Name</th>
+						<th>Last Name</th>
+						<th>UserName</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1234</td>
+						<td>Billy</td>
+						<td>Bob</td>
+						<td>billy_bob@aol.com</td>
+					</tr>
+					<tr>
+						<td>2341</td>
+						<td>Mary</td>
+						<td>Sue</td>
+						<td>mary_sue@aol.com</td>
+					</tr>
+					<tr>
+						<td>1234</td>
+						<td>James</td>
+						<td>Monk</td>
+						<td>james_monk@aol.com</td>
+					</tr>
+					<tr>
+						<td>1234</td>
+						<td>George</td>
+						<td>Washington</td>
+						<td>george_washington@aol.com</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
 
 
 
