Input Types: Phone, Email, Date, Color

--- a/Intro.html
+++ b/Intro.html
@@ -628,6 +628,51 @@
 		</div>
 
 
+		<hr>
+		<br>
+
+		<div class="page-header">
+			<h1>Input Types</h1>
+		</div>
+
+		<div class="row">
+
+			<div class="col-sm-3">
+				<div class="input-group">
+					<span class="input-group-addon">
+						<span class="glyphicon glyphicon-plus"></span>
+						 Color
+					</span>
+					<input type="color" class="form-control"></input>
+				</div>
+			</div>
+
+			<div class="col-sm-3">
+				<div class="input-group">
+					<span class="input-group-addon">Date</span>
+					<input type="date" class="form-control"></input>
+				</div>
+			</div>
+
+			<div class="col-sm-3">
+				<div class="input-group">
+					<span class="input-group-addon">Email</span>
+					<input type="email" class="form-control"></input>
+				</div>
+			</div>
+
+			<div class="col-sm-3">
+				<div class="input-group">
+					<span class="input-group-addon">Phone</span>
+					<input type="tel" class="form-control"></input>
+				</div>
+			</div>
+
+		</div>
+
+
+
+
 
 
 
