Output tag from form slider

--- a/Intro.html
+++ b/Intro.html
@@ -670,6 +670,18 @@
 
 		</div>
 
+		<hr>
+		<br>
+		<div class="page-header">
+			<h1>Form Output</h1>
+		</div>
+
+		<form oninput="x.value=parseInt(a.value)+parseInt(b.value)">
+		<input type="range" id="a" value="50"> 100 + 
+		<input type="number" id="b" value="50"> = 
+		<output name="x" for="a b"></output>
+		</form>
+
 
 
 
