--- a/Intro.html
+++ b/Intro.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" type="text/css" href="css/theme.css">
+	<link rel="stylesheet" type="text/css" href="css/intro-practice.css">
 
 	<title>Intro to Html</title>
 </head>
@@ -682,7 +683,7 @@
 		<output name="x" for="a b"></output>
 		</form>
 
-		
+
 
 
 
